Write pid to uwsgi.pid

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -15,6 +15,8 @@ socket = /srv/textpile/uwsgi.sock
 #chmod-socket = 644
 chmod-socket = 666
 
+pidfile = /srv/textpile/uwsgi.pid
+
 master = 1
 die-on-term = 1
 processes = 4
