Dockerize the app and crawler

--- a/config/uwsgi.ini
+++ b/config/uwsgi.ini
@@ -1,9 +1,5 @@
 [uwsgi]
 
-#uid = www-data
-#gid = www-data
-uid = js
-gid = js
 chdir = /srv/textpile
 home = /srv/textpile
 pythonpath = /srv/textpile
@@ -23,4 +19,4 @@ processes = 4
 optimize = 2
 
 logdate = 1
-logto = /srv/textpile/uwsgi.log
+logto = /srv/textpile/logs/uwsgi.log
