--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -1,8 +1,15 @@
-location = /ilmot { rewrite ^ /ilmot/; }
-location /ilmot { try_files $uri @ilmot; }
-location @ilmot {
-  include uwsgi_params;
-  uwsgi_param SCRIPT_NAME /ilmot;
-  uwsgi_modifier1 30;
-  uwsgi_pass unix:/srv/textpile/uwsgi.sock;
+server {
+  listen 80 default_server;
+  server_name localhost;
+  charset utf-8;
+  client_max_body_size 10M;
+
+  location /static {
+    alias /srv/textpile/static;
+  }
+
+  location / {
+    include uwsgi_params;
+    uwsgi_pass unix:/srv/textpile/uwsgi.sock;
+  }
 }
